--- a/css/taproom_css.css
+++ b/css/taproom_css.css
@@ -6,33 +6,264 @@
 }
 body {
     font-family: "Gidole", sans-serif;
-    height: 100vh;
 }
-main {
-    padding-block: 5rem;
-    padding-inline: 3rem;
+a {
+    text-decoration: none;
+    color: black;
+}
+ul > li {
+    list-style: none;
+}
+header {
+    padding-inline: 2rem;
+    padding-block: .5rem;
+    background-color: black;
+}
+
+.grid {
+    display: grid;
+}
+.flex { 
+    display: flex;
+}
+.flex-column {
+    flex-direction: column;
 }
 .center {
     display: grid;
     place-content: center;
 }
-.my-button {
-    cursor: pointer;
-    font-size: 15px;
-    padding-block: 1rem;
-    padding-inline: 2.5rem;
-    border-radius: 2.5rem;
+.center-align {
+    text-align: center;
+}
+
+/*------------ HEADER ------------*/
+.column-header {
+    grid-template-columns: repeat(2, auto);
+}
+.title-logo {
+    flex-direction: row;
+    gap: .5rem;
+}
+.title-logo img {
+    width: 15rem;
+}
+.navegation {
+    flex-direction: row-reverse;
+}
+.navegation ul > li > a {
+    font-size: clamp(15px, 3vw, 16px);
     text-transform: uppercase;
     color: white;
-    background-color: black;
-    margin-top: 2rem;
     transition: all .3s ease-in-out;
 }
-.my-button:hover {
-    opacity: .8;
+.gap5rem {
+    gap: 5rem
 }
-.img img {
-    width: 23rem;
-    max-width: 100%;
-    border-radius: 15px;
+#burgercheck {
+    display: none;
+}
+.burger-icon {
+    display: none;
+    color: white;
+}
+.logo-burger {
+    display: none;
+}
+.title-logo div > h1 {
+    color: #401e08;
+}
+
+/*--------------  TAPROOM -----------------*/
+.taproom {
+    position: relative;
+    background-color: #352012;
+}
+.taproom-img { 
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: url(../img/taproom-img/fondo-Taproom.jpeg) no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    opacity: .3;
+}
+.my-taproom {
+    position: relative;
+    height: 650px;
+}
+.taproom-title {
+    font-size: clamp(35px, 3vw, 40px);
+    text-transform: uppercase;
+    color: white;
+}
+.taproom-text {
+    font-size: clamp(17px, 3vw, 20px);
+    color: white;
+}
+.taproom-text p {
+    width: 600px;
+}
+.gappx {
+    gap: 40px;
+}
+.taproom-btn button {
+    color: white;
+    background-color: #000000;
+    border-radius: 6px;
+    padding-block: .8rem;
+    padding-inline: 1.3rem;
+    font-size: clamp(15px, 3vw, 18px);
+    text-transform: uppercase;
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+}
+.taproom-btn button:hover {
+    color: black;
+    background-color: white;
+}
+
+/*--------------  FOOTER -----------------*/
+footer {
+    background-color: #FDFAE9;
+}
+.flex-2 {
+    flex-direction: column;
+}
+.flex-2 h2 {
+    font-size: clamp(18px, 3vw, 20px);
+    text-transform: uppercase;
+    color: #401e08;
+    margin-top: 1rem;
+    margin-bottom: 2.3rem;
+}
+.flex-2 > a {
+    font-size: clamp(14px, 3vw, 16px);
+    color: #401e08;
+}
+.footer {
+    padding: 5rem;
+}
+.title-footer {
+    font-size: clamp(22px, 3vw, 30px);
+    color: white;
+    text-transform: uppercase;
+}
+.text-footer {
+    font-size: clamp(15px, 3vw, 22px);
+    color: white;
+    text-align: justify;
+}
+.footer-flex {
+    gap: 2rem;
+}
+.footer-column-2 {
+    grid-template-columns: 470px 350px;
+    gap: 4rem;
+}
+.button-footer button {
+    font-size: clamp(15px, 3vw, 20px);
+    background-color: #f4e493;
+    color: #401e08;
+    padding-block: .8rem;
+    padding-inline: 3rem;
+    border-radius: 5rem;
+    text-transform: uppercase;
+    transition: all .3s
+}
+.button-footer button:hover {
+    cursor: pointer;
+    background-color: #efd15a;
+}
+.img-footer {
+    position: relative;
+}
+.img-footer img {
+    width: 30rem;
+    position: absolute;
+    left: -79px;
+    top: -170px;
+}
+.footer-column-2-2 {
+    grid-template-columns: repeat(2, auto);
+    gap: 3.4rem;
+}
+.footer-column-3 {
+    grid-template-columns: repeat(3, auto);
+    gap: 8rem;
+}
+.fa-phone, .fa-envelope {
+    font-size: clamp(27px, 3vw, 30px);
+    color: #4E2A14;
+}
+.text-logo {
+    font-size: clamp(15px, 3vw, 22px);
+    color: #401e08;
+}
+.title-telefono {
+    gap: 1.4rem;
+    padding: 1rem;
+    padding-inline: 1.4rem;
+    color: #401e08;
+}
+.title-telefono div > a {
+    font-size: clamp(18px, 3vw, 20px);
+}
+.title-email {
+    gap: 1.4rem;
+    padding: 1rem;
+    padding-inline: 1.4rem;
+    color: #401e08;
+}
+.title-email div > a {
+    font-size: clamp(18px, 3vw, 20px);
+}
+.social-media {
+    padding: 1rem;
+}
+.gap-footer {
+    gap: 3rem;
+}
+.gap-footer-2 {
+    gap: 5rem;
+}
+.gap-footer-3 {
+    gap: 1.5rem;
+}
+.social {
+    color: #4E2A14;
+    background-color: #efd15a;
+    font-size: 19px;
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+    transition: all .4s ease-in-out;
+}
+.social-f:hover {
+    background-color: #3b5998;
+    color: #fdfbed;
+}
+.social-i:hover {
+    background: #C13584;
+    color: #fdfbed;
+}
+.social-w:hover {
+    background-color: #25d366;
+    color: #fdfbed;
+}
+
+@media (min-width: 1013px) {
+    .my-footer {
+        background-color: #6F2601;
+        border-radius: 15px;
+        padding-inline: 3.2rem;
+        padding-block: 2.5rem;
+        height: 100%;
+    }
+    .my-footer2 {
+        padding-top: 12rem;
+        padding-inline: 3.6rem;
+    }
 }
